--- a/src/components/try-hcp-callout/components/try-hcp-callout/try-hcp-callout.module.css
+++ b/src/components/try-hcp-callout/components/try-hcp-callout/try-hcp-callout.module.css
@@ -1,17 +1,21 @@
 .root {
 	--padding: 24px;
+	--border-radius: 5px;
 
 	background: none;
+	border-radius: var(--border-radius);
 	display: flex;
 	isolation: isolate;
-	overflow: hidden;
 	padding: 0;
 }
 
 .backgroundBase {
-	position: absolute;
+	/* Shared border-radius from Card hides overflow, but shows focus styles */
+	border-radius: var(--border-radius);
 	bottom: 0;
 	left: 0;
+	overflow: hidden;
+	position: absolute;
 	right: 0;
 	top: 0;
 	z-index: -1;
@@ -40,13 +44,17 @@
 	display: none;
 
 	@media (--dev-dot-tablet-up) {
+		/* Shared border-radius from Card hides overflow, but shows focus styles */
+		border-radius: var(--border-radius);
 		display: flex;
 		flex-direction: column;
 		flex-shrink: 0;
 		margin-left: auto;
 		max-width: var(--image-width);
+		overflow: hidden;
 		position: relative;
 		width: 40%;
+		z-index: -1;
 	}
 }
 
